[gd_scene load_steps=33 format=2]

[ext_resource path="res://Player(woman)/Individual Sprite/Run/Warrior_Run_3.png" type="Texture" id=1]
[ext_resource path="res://Player(woman)/Individual Sprite/Run/Warrior_Run_6.png" type="Texture" id=2]
[ext_resource path="res://Player(woman)/Individual Sprite/Run/Warrior_Run_4.png" type="Texture" id=3]
[ext_resource path="res://Ecenas/script_del_menu/ParallaxLayer12.gd" type="Script" id=4]
[ext_resource path="res://Ecenas/script_del_menu/ParallaxLayer4.gd" type="Script" id=5]
[ext_resource path="res://Ecenas/script_del_menu/ParallaxLayer10.gd" type="Script" id=6]
[ext_resource path="res://Ecenas/script_del_menu/ParallaxLayer11.gd" type="Script" id=7]
[ext_resource path="res://Ecenas/script_del_menu/ParallaxLayer9.gd" type="Script" id=8]
[ext_resource path="res://Player(woman)/Individual Sprite/Run/Warrior_Run_5.png" type="Texture" id=9]
[ext_resource path="res://Player(woman)/Individual Sprite/Run/Warrior_Run_8.png" type="Texture" id=10]
[ext_resource path="res://Player(woman)/Individual Sprite/Run/Warrior_Run_7.png" type="Texture" id=11]
[ext_resource path="res://Player(woman)/Individual Sprite/Run/Warrior_Run_1.png" type="Texture" id=12]
[ext_resource path="res://Player(woman)/Individual Sprite/Run/Warrior_Run_2.png" type="Texture" id=13]
[ext_resource path="res://Free Pixel Art Forest/PNG/Background layers/Layer_0001_8.png" type="Texture" id=14]
[ext_resource path="res://Free Pixel Art Forest/PNG/Background layers/Layer_0011_0.png" type="Texture" id=15]
[ext_resource path="res://Free Pixel Art Forest/PNG/Background layers/Layer_0006_4.png" type="Texture" id=16]
[ext_resource path="res://Free Pixel Art Forest/PNG/Background layers/Layer_0003_6.png" type="Texture" id=17]
[ext_resource path="res://Free Pixel Art Forest/PNG/Background layers/Layer_0010_1.png" type="Texture" id=18]
[ext_resource path="res://Free Pixel Art Forest/PNG/Background layers/Layer_0008_3.png" type="Texture" id=19]
[ext_resource path="res://Free Pixel Art Forest/PNG/Background layers/Layer_0004_Lights.png" type="Texture" id=20]
[ext_resource path="res://Free Pixel Art Forest/PNG/Background layers/Layer_0007_Lights.png" type="Texture" id=21]
[ext_resource path="res://Free Pixel Art Forest/PNG/Background layers/Layer_0005_5.png" type="Texture" id=22]
[ext_resource path="res://Free Pixel Art Forest/PNG/Background layers/Layer_0002_7.png" type="Texture" id=23]
[ext_resource path="res://Free Pixel Art Forest/PNG/Background layers/Layer_0009_2.png" type="Texture" id=24]
[ext_resource path="res://Ecenas/script_del_menu/ParallaxLayer3.gd" type="Script" id=25]
[ext_resource path="res://Ecenas/script_del_menu/ParallaxLayer7.gd" type="Script" id=26]
[ext_resource path="res://Ecenas/script_del_menu/ParallaxLayer8.gd" type="Script" id=27]
[ext_resource path="res://Ecenas/script_del_menu/ParallaxLayer6.gd" type="Script" id=28]
[ext_resource path="res://Ecenas/script_del_menu/ParallaxLayer5.gd" type="Script" id=29]
[ext_resource path="res://Free Pixel Art Forest/PNG/Background layers/Layer_0000_9.png" type="Texture" id=30]
[ext_resource path="res://Script/Login.gd" type="Script" id=31]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 1 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "run",
"speed": 15.0
} ]

[node name="Login" type="Node2D"]
script = ExtResource( 31 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 514, 300 )
scale = Vector2( 1.10776, 0.75662 )
texture = ExtResource( 15 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 512.5, 300.5 )
scale = Vector2( 1.10453, 0.757881 )
texture = ExtResource( 18 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1020, 0 )
script = ExtResource( 25 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 511.5, 299 )
scale = Vector2( 1.10237, 0.759143 )
texture = ExtResource( 24 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1020, 0 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2( 513, 301.5 )
scale = Vector2( 1.10345, 0.755359 )
texture = ExtResource( 19 )

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1020, 0 )
script = ExtResource( 29 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer5"]
position = Vector2( 513, 299.5 )
scale = Vector2( 1.1056, 0.757881 )
texture = ExtResource( 21 )

[node name="ParallaxLayer6" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1020, 0 )
script = ExtResource( 28 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer6"]
position = Vector2( 512, 300 )
scale = Vector2( 1.10345, 0.75662 )
texture = ExtResource( 16 )

[node name="ParallaxLayer7" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1020, 0 )
script = ExtResource( 26 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer7"]
position = Vector2( 513, 301 )
scale = Vector2( 1.10129, 0.759143 )
texture = ExtResource( 22 )

[node name="ParallaxLayer8" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1020, 0 )
script = ExtResource( 27 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer8"]
position = Vector2( 513.5, 299 )
scale = Vector2( 1.10884, 0.754098 )
texture = ExtResource( 20 )

[node name="ParallaxLayer9" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1020, 0 )
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer9"]
position = Vector2( 513, 299.75 )
scale = Vector2( 1.10345, 0.757251 )
texture = ExtResource( 17 )

[node name="ParallaxLayer10" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1020, 0 )
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer10"]
position = Vector2( 514.5, 299 )
scale = Vector2( 1.10884, 0.754098 )
texture = ExtResource( 23 )

[node name="ParallaxLayer11" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1020, 0 )
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer11"]
position = Vector2( 511.5, 299.75 )
scale = Vector2( 1.10453, 0.750946 )
texture = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="ParallaxBackground"]
position = Vector2( 468, 520 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "run"
frame = 4
playing = true

[node name="ParallaxLayer12" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1020, 0 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer12"]
position = Vector2( 512, 296.5 )
scale = Vector2( 1.10345, 0.76797 )
texture = ExtResource( 30 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 448.0
margin_top = 289.0
margin_right = 576.0
margin_bottom = 357.0

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 128.0
margin_bottom = 20.0
text = "iniciar sesi√≥n"

[node name="crear_cuentaBTN" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 128.0
margin_bottom = 44.0
text = "Crear cuenta"

[node name="SalirBTN" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 128.0
margin_bottom = 68.0
text = "Salir"

[node name="NameTXT" type="LineEdit" parent="."]
margin_left = 192.0
margin_top = 192.0
margin_right = 320.0
margin_bottom = 232.0
align = 1
placeholder_text = "Name"

[node name="PasswordTXT" type="LineEdit" parent="."]
margin_left = 704.0
margin_top = 192.0
margin_right = 834.0
margin_bottom = 232.0
align = 1
placeholder_text = "Password"

[node name="GmailTXT" type="LineEdit" parent="."]
margin_left = 448.0
margin_top = 192.0
margin_right = 576.0
margin_bottom = 232.0
align = 1
placeholder_text = "Gmail"

[connection signal="pressed" from="VBoxContainer/crear_cuentaBTN" to="." method="_on_crear_cuentaBTN_pressed"]
[connection signal="pressed" from="VBoxContainer/SalirBTN" to="." method="_on_SalirBTN_pressed"]
